# apiclient-boilerplate-rs

./: Cargo.toml  Cargo.toml.template  README.md  README.template.md  _config.yml  appveyor.yml  initial-setup.ps1  initial-setup.sh  sonar-project.properties  sonar-project.properties.template
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: infisical-secrets-check.yml  linter.yml  sonar-cloud.yml
src/: api_client.rs  client.rs  error.rs  lib.rs  models.rs
tests/: integration.rs
